# niclassify

./: .Rhistory  .gitattributes  .gitignore  PLANNING.md  README.md  Untitled.ipynb  api_get.py  apt.py  bad.bat  data_auto.ipynb  easy-launch.bat  environment.yml  feature selection.ipynb  gui.spec  install.bat  k-means.py  kmeans-auto.ipynb  kmeans-auto.py  kmeans.ipynb  kmeans.py  kmeansmd.ipynb  launch-linux.sh  launch-mac.sh  launch-windows.bat  main.py  meta.yaml  niclassify-launch.bat  out.csv  out_fasta.fasta  pyproject.toml  requirements.txt  requirements_old.txt  rf-auto.py  script plan.txt  setup.py  test.py  test.tsv  test_response.xml  tree.dot  tui-test.py
.VSCodeCounter/: details.md  results.csv  results.md  results.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data/: NEallResults.txt  test_data_10k.csv  test_data_1k.csv  test_data_1k_f100.csv  tmphfc7z5wa.tsv
docs/: VM tutorial.md  user-manual.md
niclassify/: GUI.py  GUI_old.py  None  TODO.md  __init__.py  __main__.py  gui.py  niclassify.py  niclassify.pyw  od_fix.fasta  requirements.txt  rf-auto.py  rf_auto.py  standard_auto.py
output/: BCM_complex_test.csv  BCM_simple_test.csv  NEB_ka.csv  NEB_rf.csv  NEB_rf_wkm.csv  NEBtest.csv  NEF_km_noweight.csv  NEF_km_noweight.csv.log.txt  NEF_revision.csv  NEF_revision2.csv  NEF_rf_trainknown.csv  NEF_rf_trainknown1.csv  NEF_rf_trainknown1.csv.log.txt  NEFtest.csv  NEFtestdrop.csv  agh.csv  aghagh.csv  best_features.json  feh.csv  feh1.csv  fehh.csv  find_rterr.csv  na11.csv  nah12.csv  nah8.csv  ni_pr_lo.csv  ni_tr_lo.csv  ni_tr_lo_in.csv  output.csv  (+7 more)
(+616 files in other folders)
